created space controller and model

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV = development
 PORT = 5000
+MONGO_URI = mongodb+srv://spamela:Avq22888@clusterjointspaces.tetr2.mongodb.net/jointspacesapp?retryWrites=true&w=majority
