--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,10 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^8.2.0",
+    "serve": "^13.0.2",
     "tailwindcss": "^3.0.24",
     "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
     "workbox-cacheable-response": "^6.5.3",
@@ -33,7 +33,8 @@
     "workbox-range-requests": "^6.5.3",
     "workbox-routing": "^6.5.3",
     "workbox-strategies": "^6.5.3",
-    "workbox-streams": "^6.5.3"
+    "workbox-streams": "^6.5.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
