--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV = production
 PORT = 5000
-CORS_ORIGIN = http://localhost:3000, http://localhost:5000
+CORS_ORIGIN = http://localhost:3000, http://localhost:5000, https://api.ipify.org/?format=json
 MONGO_URI = mongodb+srv://spamela:Avq22888@clusterjointspaces.tetr2.mongodb.net/jointspacesapp?retryWrites=true&w=majority
 JWT_SECRET = abc123
